fixed banner height and weird spacing below navbar

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -2,7 +2,7 @@
   background-size: cover;
   background-position: center;
   padding: 150px 0;
-  height: 39.8em;
+  height: calc(100vh - 50px);
   color: white;
   margin: none;
 }
